fixed message line wrapping

--- a/public/index/style.css
+++ b/public/index/style.css
@@ -67,3 +67,7 @@ textarea.forumTextArea{
 .post-role{
     color: rgb(43, 140, 70);
 }
+
+pre{
+    white-space: pre-wrap;
+}
